# spacestation2197

./: .gitattributes  .gitignore  .luarc.json  Cargo.toml  README.md  rustfmt.toml  server_config.toml  stylua.toml
.github/workflows/: ci.yaml  release.yaml
assets/: data.lua
assets/grids/: bad_map.ron  empty_map.ron  example.ron  ministation.ron  showmap.ron  test.ron
assets/images/effects/: attribution.txt
assets/models/: attribution.txt  bad_marker.glb  box.glb  floor.glb  item.glb  lab-dark.glb  lab-light.glb  lattice.glb  plenum.glb  task.glb  wall.glb
assets/models/ss3d/: attribution.txt  bikehorn.glb  crowbar.glb  ghost.glb  human.glb  multitool.glb  player.glb  screwdiver.glb  scrubber.glb  steel_sheets.glb  vent.glb  welder.glb  wirecutters.glb  wrench.glb
assets/prototypes/: atmos.lua  gases.lua  showcase.lua  tiles.lua
assets/prototypes/entities/: furniture.lua  items.lua  markers.lua  mobs.lua  structures.lua
assets/sounds/: attribution.txt
assets/sounds/music/: attribution.txt
client/: Cargo.toml
client/src/: main.rs
client/src/base/: mod.rs  states.rs
client/src/base/audio/: mod.rs
client/src/base/camera/: mod.rs
client/src/base/chatbox/: mod.rs
client/src/base/entities/: mod.rs
client/src/base/grid/: mod.rs
client/src/base/input/: mod.rs
client/src/base/menus/: escape_menu.rs  mod.rs
client/src/base/menus/main_menu/: editor_menu.rs  join_menu.rs  mod.rs
client/src/base/placement/: mod.rs
client/src/base/session/: mod.rs  ui.rs
client/src/base/settings/: mod.rs
client/src/base/ui/: following_text.rs  mod.rs
client/src/base/windows/: mod.rs
client/src/debug_tools/: atmos.rs  frametime.rs  gizmos.rs  grid.rs  inspector.rs  mod.rs  networking.rs
client/src/editor/: mod.rs  ui.rs
client/src/game/: mod.rs
client/src/game/atmos/: mod.rs  particles.rs
client/src/game/atmos/particles/: mod.rs
client/src/game/camera/: mod.rs
client/src/game/containers/: mod.rs
client/src/game/examine/: mod.rs
client/src/game/hands/: mod.rs
client/src/game/hud/: mod.rs
client/src/game/interact/: mod.rs  ui.rs
client/src/game/light/: mod.rs
client/src/game/mind/: mod.rs
client/src/game/mob/: mod.rs
client/src/game/outline/: mod.rs
client/src/game/physics/: mod.rs
client/src/game/sandbox/: mod.rs  ui.rs
client/src/game/say/: mod.rs
client/src/meta/: mod.rs
client/src/meta/administration/: mod.rs  ui.rs
client/src/meta/customization/: mod.rs
client/src/meta/lobby/: mod.rs
client/src/meta/ooc/: mod.rs
client/src/placeholder/: chat.rs  mod.rs
crates/atmos/: Cargo.toml
crates/atmos/src/: lib.rs  mixture_blueprint.rs  prelude.rs  reactions.rs  tests.rs
crates/atmos_primitives/: Cargo.toml  README.md
crates/atmos_primitives/src/: equations.rs  gas_list.rs  gas_mixture.rs  hotspot.rs  lib.rs  mixture_blueprint.rs  mixture_template.rs  prelude.rs
crates/atmos_primitives/src/reactions/: builder.rs  mod.rs  parser.rs  validation.rs
crates/atmos_simulation/: Cargo.toml  README.md
crates/atmos_simulation/src/: active.rs  chunk.rs  excited.rs  lib.rs  prelude.rs  schedule.rs  tile_mixture.rs
crates/atmos_simulation/src/simulation/: flow.rs  hotspot.rs  mod.rs  reactions.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/content/: Cargo.toml
crates/content/assets/: entity.lua  entity_inheritance.lua  inheritance.lua  simple.lua
crates/content/src/: environment.rs  lib.rs  prelude.rs  prototype.rs
crates/grid/: Cargo.toml
crates/tile_grid/: Cargo.toml
crates/toolbox_ui/: Cargo.toml
crates/toolbox_ui/src/: constants.rs  lib.rs  main.rs  palette.rs  prelude.rs  theme.rs  tokens.rs
crates/toolbox_ui/src/containers/: flex_spacer.rs  group.rs  mod.rs  pane.rs  subpane.rs
crates/toolbox_ui/src/controls/: button.rs  checkbox.rs  disclosure_toggle.rs  listview.rs  menu.rs  mod.rs  number_input.rs  radio.rs  scrollbar.rs  slider.rs  text_input.rs  toggle_switch.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/audio/: mod.rs
server/src/game/: mod.rs
server/src/game/atmos/: mod.rs
server/src/game/combat/: mod.rs
server/src/game/containers/: mod.rs
server/src/game/ghost/: mod.rs
server/src/game/hands/: mod.rs
server/src/game/interact/: mod.rs
server/src/game/markers/: mod.rs
server/src/game/mind/: mod.rs
server/src/game/mob/: health.rs  mod.rs
server/src/game/placement/: mod.rs
server/src/game/sandbox/: mod.rs
server/src/game/say/: mod.rs
server/src/meta/: mod.rs
server/src/meta/administration/: mod.rs
server/src/meta/customization/: mod.rs
server/src/meta/gamemode/: mod.rs
server/src/meta/ooc/: mod.rs
server/src/meta/round/: mod.rs
server/src/networking/: mod.rs
server/src/showcase/: mod.rs
server/src/utils/: mod.rs
shared/: Cargo.toml
shared/src/: defines.rs  lib.rs
shared/src/audio/: mod.rs
shared/src/chat/: mod.rs
shared/src/game/: mod.rs
shared/src/game/atmos/: mod.rs
shared/src/game/combat/: mod.rs
shared/src/game/containers/: mod.rs
shared/src/game/ghost/: mod.rs
shared/src/game/grid/: mod.rs
shared/src/game/hands/: mod.rs
shared/src/game/hands/sounds/: mod.rs
shared/src/game/interact/: intent.rs  messages.rs  mod.rs
shared/src/game/items/: mod.rs
shared/src/game/light/: mod.rs
shared/src/game/machinery/: mod.rs
shared/src/game/markers/: mod.rs
shared/src/game/mind/: mod.rs
shared/src/game/mob/: color.rs  controller.rs  health.rs  mod.rs
shared/src/game/persistence/: mod.rs
shared/src/game/physics/: mod.rs
shared/src/game/placement/: mod.rs
shared/src/game/player/: mod.rs
shared/src/game/power/: mod.rs
shared/src/game/sandbox/: mod.rs
shared/src/game/say/: deadsay.rs  mod.rs
shared/src/meta/: customization.rs  gamemode.rs  manager.rs  mod.rs
shared/src/meta/administration/: mod.rs
shared/src/meta/ooc/: mod.rs
shared/src/meta/player/: mod.rs
shared/src/meta/round/: mod.rs
shared/src/networking/: mod.rs
shared/src/placeholder/: mod.rs
shared/src/placeholder/showcase/: mod.rs
shared/src/utils/: filters.rs  mod.rs  physics.rs
(+80 files in other folders)
