[workspace]
resolver = "3"
members = [
    "crates/*", 
    "client", 
    "server", 
    "shared"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"




[workspace.dependencies]
atmos_primitives = { path = "crates/atmos_primitives" }
atmos_simulation = { path = "crates/atmos_simulation" }
common = { path = "crates/common" }
tile_grid = { path = "crates/tile_grid" }
content = { path = "crates/content" }

shared = { path = "shared" }
server = { path = "server" }

bevy_replicon = { version = "0.40", default-features = false }
bevy_replicon_renet = { version = "0.16", default-features = false, features = ["renet_netcode"] }
bevy_renet = { version = "4.0", default-features = false }

avian3d = { version = "0.6.1", features = ["simd", "serialize"]}

wide = { version = "1.5.0", features = ["serde"] }

rand = "0.9.2"
heapless = { version = "0.9.2", features = ["serde"]}
smallvec = { version = "1.15.1", features = ["serde"]}
crc32fast = "1.5.0"

ron = "0.12.0" 
toml = "1.0.2"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = [ "derive" ]}

indexmap = "2.13.0"

# deliberately not using luajit
mlua = { version = "0.11.6", features = ["lua51", "vendored", "serde", "macros", "anyhow"] }

criterion = { version = "0.8.2", features = ["html_reports"]}

bevy = {
    version = "0.18.1",
    default-features = false,
    features = [
        "bevy_asset",
        "bevy_color",
        "bevy_gltf",
        "bevy_log",
        "bevy_state",
        "bevy_scene",
        "multi_threaded",
        "sysinfo_plugin",
        "reflect_auto_register",

        "bevy_audio",

        "serialize",
        "default_font",
    ]
}

