[package]
name = "client"
version = "0.0.1"
edition = "2024"

[dependencies]
shared.workspace = true
# server.workspace = true

atmos.workspace = true
common.workspace = true
grid.workspace = true
content.workspace = true

bevy_replicon = { workspace = true, features = ["client"] }
bevy_replicon_renet = { workspace = true, features = ["client"] }
bevy_renet.workspace = true

avian3d = { workspace = true, features = ["diagnostic_ui", "debug-plugin"] }
bevy_hanabi = { version = "0.18.0" }
bevy_mod_outline = "0.12"

bevy_egui = "0.39.0"
bevy-inspector-egui = "0.36"
# bevy_rich_text3d = "0.5.1"

anyhow.workspace = true
uom.workspace = true
rand.workspace = true

bevy = { workspace = true, features = [
    "bevy_anti_alias",
    "bevy_post_process",
    "bevy_animation",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_picking", # bevy_egui requirement
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "bevy_scene",
    "hdr",

    # audio
    # "symphonia-all",
    "vorbis",

    "mesh_picking",

    # Platform stuff
    "png",
    "x11",
    "tonemapping_luts",
    "zstd_rust",
    "custom_cursor",

    # Experimental
    "experimental_pbr_pcss",

    "dev"
]}

