[package]
name = "client"
version = "0.0.1"
edition = "2024"

[features]
dev = ["bevy-inspector-egui"]

[dependencies]
shared.workspace = true
server.workspace = true

atmos_primitives.workspace = true
atmos_simulation.workspace = true
common.workspace = true
tile_grid.workspace = true
content.workspace = true

bevy_replicon = { workspace = true, features = ["client"] }
bevy_replicon_renet = { workspace = true, features = ["client"] }
bevy_renet.workspace = true

avian3d = { workspace = true, features = ["diagnostic_ui", "debug-plugin", "bevy_picking"] }
# bevy_hanabi = { version = "0.18.0" } # TODO: wait for 0.19 update
# bevy_mod_outline = "0.13" # TODO: wait for crate release

bevy_egui = "0.40.0"
bevy-inspector-egui = { version = "0.37", optional = true }

rand.workspace = true

bevy = { 
    workspace = true, 
    features = [
        "bevy_anti_alias",
        "bevy_post_process",
        "bevy_animation",
        "bevy_core_pipeline",
        "bevy_gizmos",
        "bevy_gizmos_render",
        "bevy_gltf",
        "bevy_pbr",
        "bevy_picking", # bevy_egui requirement
        "bevy_render",
        "bevy_text",
        "bevy_ui",
        "bevy_ui_render",
        "bevy_window",
        "bevy_winit",
        "bevy_scene",
        "hdr",

        # audio
        # "symphonia-all",
        "vorbis",

        "mesh_picking",

        # Platform stuff
        "png",
        "x11",
        "tonemapping_luts",
        "zstd_rust",
        "custom_cursor",

        # Experimental
        "experimental_pbr_pcss",

        "dev"
    ]
}

