[package]
name = "client"
version = "0.0.1"
edition = "2024"

[features]
dev = ["bevy-inspector-egui"]
steam = ["shared/steam"]

[dependencies]
shared.workspace = true
server.workspace = true

atmos_primitives.workspace = true
atmos_simulation.workspace = true
common.workspace = true
tile_grid.workspace = true
content.workspace = true
toolbox_ui.workspace = true

bevy_replicon = { workspace = true, features = ["client"] }
bevy_replicon_renet = { workspace = true, features = ["client"] }
bevy_renet.workspace = true

avian3d = { workspace = true, features = ["diagnostic_ui", "debug-plugin", "bevy_picking"] }
# bevy_hanabi = { version = "0.18.0" } # TODO: wait for 0.19 update
# bevy_mod_outline = "0.13" # TODO: wait for crate release

bevy_egui = "0.40.0"
bevy-inspector-egui = { version = "0.37", optional = true }

rand.workspace = true

bevy = { 
    workspace = true, 
    features = [
        # Feature Collections
        "3d_bevy_render",
        "ui_bevy_render",
        "picking",
        "default_platform",
        "dev",

        # Features
        "experimental_pbr_pcss",
    ]
}

