[package]
name = "server"
version = "0.0.1"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server_bin"
path = "src/main.rs"

[dependencies]
atmos_primitives.workspace = true
atmos_simulation.workspace = true
common.workspace = true
tile_grid.workspace = true
content.workspace = true

shared.workspace = true

bevy_replicon = { workspace = true, features = ["server"] }
bevy_replicon_renet = { workspace = true, features = ["server"] }
bevy_renet.workspace = true

avian3d.workspace = true

anyhow.workspace = true
rand.workspace = true

bevy = { workspace = true, features = ["dev"] }
