[package]
name = "atmos_primitives"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy.workspace = true

common.workspace = true

wide.workspace = true
heapless.workspace = true
anyhow.workspace = true
serde.workspace = true
rand.workspace = true

chumsky.workspace = true
cranelift.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-frontend.workspace = true

[dev-dependencies]
criterion.workspace = true
